Adicionando algumas entidades e configurações